# glgrib

./: .gitattributes  .gitignore  .glgrib.db  CLOUD.md  CMakeLists.txt  CMakeLists.txt.old  CONTOUR.md  ColorFragmentShader.fragmentshader  DIFF.md  GRID.md  HEIGHT.md  ISOFILL.md  LAMBERT.md  LAND.md  LANDSCAPE.md  MISC.md  MPI.md  PALETTE.md  POINTS.md  PROJECTION.md  README.md  SATELLITE.md  SCALAR.md  SHELL.md  SPECTRAL.md  STREAM.md  STRING.md  TODO  TransformVertexShader.vertexshader  VECTOR.md  barb.sh  colors.pl  contour.sh  derivgp.sh  diff.sh  dist.sh  egl.c  egl.cc  egl1.cc  gdbwrap  (+337 more)
aro2.5/: SURFTEMPERATURE.grb
aro_small/: S041WIND.U.PHYS.grb  S041WIND.V.PHYS.grb  SURFTEMPERATURE.grb
arpt1798_wind/: glob25_+1.grb  glob25_00.grb  lfpw_0_2_3_sfc_20_v.grib2
attic/: glgribdb.sql  shapefile.list
coastlines/: departements-descriptif.txt  wdb_borders_c.b  wdb_borders_h.b  wdb_borders_i.b  wdb_borders_l.b
debian/: .gitignore  changelog  clean.sh  control  copyright  glgrib-data.install  glgrib-doc.install  glgrib-egl.install  glgrib-glfw.install  glgrib-shaders.install  glgrib-tk.install  glgrib.install  libglgrib-egl-dev.install  libglgrib-egl0.install  libglgrib-glfw-dev.install  libglgrib-glfw-perl.install  rules  (+8 more)
src/: CMakeLists.txt  glGrib.cc  glGribBatch.cc  glGribBatch.h  glGribBitmap.cc  glGribBitmap.h  glGribBorder.cc  glGribBorder.h  glGribBuffer.h  glGribCities.cc  glGribCities.h  glGribClear.h  glGribCoast.cc  glGribCoast.h  glGribColorbar.cc  glGribColorbar.h  glGribContainer.cc  glGribContainer.h  glGribDBase.cc  glGribDBase.h  glGribDepartements.cc  glGribDepartements.h  glGribEGL.cc  glGribEarCut.cc  glGribField.cc  glGribField.h  glGribFieldContour.cc  glGribFieldContour.h  glGribFieldFloatBuffer.cc  glGribFieldFloatBuffer.h  glGribFieldIsoFill.cc  glGribFieldIsoFill.h  glGribFieldMetadata.h  glGribFieldScalar.cc  glGribFieldScalar.h  glGribFieldStream.cc  glGribFieldStream.h  glGribFieldVector.cc  glGribFieldVector.h  glGribFitPolynomial.cc  (+135 more)
src/LFI/: CMakeLists.txt  abor.c  altm.c  alts.c  dumm.c  fmul.c  grok.c  hndl.c  intf.c  makefile  miss.c  netw.c  test.c  util.c  verb.c
src/glGrib/: Batch.cc  Bitmap.cc  Border.cc  CMakeLists.txt  Cities.cc  Coast.cc  Colorbar.cc  Container.cc  DBase.cc  Departements.cc  EarCut.cc  Field.cc  FieldContour.cc  FieldIsoFill.cc  FieldScalar.cc  FieldStream.cc  FieldVector.cc  FieldVertical.cc  FitPolynomial.cc  Font.cc  GSHHG.cc  GeoPoints.cc  Geometry.cc  GeometryGaussian.cc  GeometryLambert.cc  GeometryLatLon.cc  Grid.cc  Grok.cc  Image.cc  KdTree.cc  Land.cc  LandScape.cc  Lines.cc  Loader.cc  MD5.cc  Mapscale.cc  OpenGL.cc  Options.cc  Palette.cc  Png.cc  (+29 more)
src/glGrib/shaders/include/: palette.h  projection.h  vcut.h  vertical.h
src/glGrib/shaders/include/geometry/: gaussian.h  types.h
src/glGrib/shaders/include/geometry/gaussian/: kinds.h
src/glGrib/shaders/src/: COLORBAR.fs  CONTOUR.fs  GRID.fs  IMAGE_VS.h  ISOFILL1_GS.h  ISOFILL2.fs  ISOFILL2.vs  LAND.fs  LAND.vs  LANDSCAPE.fs  LANDSCAPE.vs  MAPSCALE.vs  MONO.fs  MONO.vs  POINTS.fs  SCALAR.fs  SCALAR.vs  SCALAR_VS.h  STREAM.fs  STREAM_VS.h  TEST.fs  VCUT.fs  VCUT.vs  VERTICAL.vs
src/glGribTk/: .gitignore  Changes  MANIFEST  Makefile.PL  README  makefile  tk.sh
src/glGribTk/lib/: tkbase.pm
src/glGribTk/lib/Tk/: ColorPicker.pm  ColorPickerDB.pm  FieldRefPicker.pm  PalettePickerDB.pm  glGrib.pm  glGribANGLE.pm  glGribBOOLEAN.pm  glGribBase.pm  glGribBaselist.pm  glGribCOLOR.pm  glGribColorPicker.pm  glGribColorPickerDB.pm  glGribDATE.pm  glGribFIELDREF.pm  glGribFIELDTYPE.pm  glGribFLOAT.pm  glGribField.pm  glGribFieldRefPicker.pm  glGribINTEGER.pm  glGribLATITUDE.pm  glGribLIST.pm  glGribLONGITUDE.pm  glGribMainWindow.pm  glGribPALETTENAME.pm  glGribPATH.pm  glGribPROJECTION.pm  glGribPalettePickerDB.pm  glGribSCALE.pm  glGribSTRING.pm  glGribTRANSFORMATION.pm  glGribTextOptions.pm  glGrib_Entity.pm  glGrib_Entry.pm  glGrib_Frame.pm  glGrib_Panel.pm  glGrib_Popup.pm
src/lfi/: CMakeLists.txt  lfi_altm.c  lfi_altm.h  lfi_alts.h  lfi_args.h  lfi_dumm.h  lfi_fmul.c  lfi_hndl.h  lfi_netw.c  lfi_netw.h  lfi_verb.c  makefile  test.c
src/perl/: .gitignore  MANIFEST  Makefile.PL  Makefile.PL.in  README  color.pl  glGrib.xs  glgrib.json  makefile  sep.pl  tk.sh
src/perl/glfw/: Makefile.PL  makefile
src/perl/glfw/lib/glGrib/: glfw.pm
src/perl/glfw/t/: offline.t
src/perl/lib/: glGrib.pm
src/perl/t/: glGribTk.pl  offline.t  tk.t  tkbase.pm  tkbaselist.pm  window.t
src/perl/t/Tk/: ColorPicker.pm  PalettePickerDB.pm  TextOptions.pm  glGrib.pm  glGribBOOLEAN.pm  glGribCOLOR.pm  glGribDATE.pm  glGribFIELDREF.pm  glGribFLOAT.pm  glGribField.pm  glGribINTEGER.pm  glGribLATITUDE.pm  glGribLIST.pm  glGribLONGITUDE.pm  glGribMainWindow.pm  glGribPALETTENAME.pm  glGribPATH.pm  glGribPROJECTION.pm  glGribSCALE.pm  glGribSTRING.pm  glGribTRANSFORMATION.pm  glGrib_Entity.pm  glGrib_Entry.pm  glGrib_Frame.pm  glGrib_Panel.pm
src/perl5/: egl.pl
src/perl5/glfw/: MANIFEST  Makefile.PL  README  glfw.xs
src/perl5/glfw/t/: offline.t  window.t
src/python/: glGrib.cc  glGribField.py  glGribOffline.py  glGribWindow.py  gl_plot.py  makefile  setup.py.in
src/python2/: glGrib.cc  glGribField.py  glGribOffline.py  glGribWindow.py  makefile  setup.py
src/python3/: .gitignore  Makefile  glGrib.cc  glGribField.py  glGribOffline.py  glGribWindow.py  glfw.cc  makefile  setup.py
src/python3/glfw/: Makefile  glGribOffline.py  glGribWindow.py  makefile  setup.py
src/shaders/: expand.pl
src/shaders/include/: enlight.h  geometry.h  linevertex.h  palette.h  projection.h  random.h  unpack.h
src/shaders/include/geometry/: lambert.h  types.h
src/shaders/include/geometry/gaussian/: guess_jlat.h
src/shaders/include/palette/: buffer_index.h
src/shaders/src/: COLORBAR.fs  COLORBAR.vs  CONTOUR.fs  CONTOUR_VS.h  FONT.fs  FONT.vs  FRAME.fs  GRID.vs  IMAGE.fs  IMAGE.vs  ISOFILL1.fs  ISOFILL1.vs  ISOFILL1_VS.h  ISOFILL2_VS.h  LANDSCAPE.fs  LANDSCAPE_VS.h  LAND_VS.h  MAPSCALE.fs  POINTS.fs  POINTS.vs  SCALAR.fs  SCALAR.vs  SCALAR_POINTS.vs  STREAM.fs  TEST.gs  TICKS.vs
(+2877 files in other folders)
